--- a/src/packages/modules/exploded-view-b2-x00/css/exploded-view-b2-x00.scss
+++ b/src/packages/modules/exploded-view-b2-x00/css/exploded-view-b2-x00.scss
@@ -37,7 +37,7 @@ $pieceTeaseStep: 0.4%;
   }
 
   .container {
-    max-width: $bgMaxWidth;
+    //max-width: $bgMaxWidth;
   }
 
   .submodule > .image-module {
@@ -95,7 +95,7 @@ $pieceTeaseStep: 0.4%;
       height: auto;
       position: absolute;
       bottom: 0;
-      padding: 30px 50px;
+      padding: 30px 0;
     }
     
     .grid {
@@ -115,6 +115,10 @@ $pieceTeaseStep: 0.4%;
     &.out {
       opacity: 0;
     }
+  }
+
+  .pieces-container {
+    overflow: hidden;
   }
 
   .pieces {
